# Digitalcrm

./: .env.example  .env.gerencianet.example  .gitignore  .roomodes  001_add_dashboard_tables.py.bak  ANALISE_CONTRATOS_PROFISSIONAL.md  ANALISE_CRM_COMPLETO.md  ANALISE_MELHORIAS_UI_PROFISSIONAL.md  ANTES_E_DEPOIS.md  ARQUIVOS_CRIADOS_CONTRATOS.md  CHECKLIST_CONTRATOS_IMPLEMENTACAO.md  CHECKLIST_IMPLEMENTACAO_CONTRATOS.md  CHECKLIST_MELHORIAS_UI.md  CHECKLIST_SETUP_CARNES_BOLETOS.md  COMECE_AQUI_CONTRATOS.md  COMECE_AQUI_CONTRATOS.txt  COMECE_AQUI_CONTRATOS_PROFISSIONAIS.md  COMECO_RAPIDO.md  COMO_USAR_CARNES_BOLETOS_UI.md  CORRECAO_CONTRATOS.md  CORRIGIR_ERRO_404_CARNES_BOLETOS.md  CORRIGIR_LOGIN_PERMANENTE.md  CRIAR_DASHBOARD_AGORA.py  DASHBOARD_ARQUITETURA.md  DASHBOARD_ARQUIVOS_CRIADOS.md  DASHBOARD_CHECKLIST_INTEGRACAO.md  DASHBOARD_CONCLUSAO.md  DASHBOARD_IMPLEMENTACAO.md  DASHBOARD_INICIO_RAPIDO.md  DASHBOARD_RESUMO.md  DASHBOARD_SETUP.bat  DASHBOARD_SETUP.ps1  DASHBOARD_SETUP_AUTOMATICO.py  DASHBOARD_START.bat  DASHBOARD_VISUAL_SUMMARY.txt  DEBUG_HASH_ISSUE.md  DIAGNOSTICAR_PROBLEMA_LOGIN.md  FAQ_CARNES_BOLETOS.md  FIX_MENUS.md  FIX_MIGRATIONS.py  (+137 more)
alembic/: env.py
alembic/versions/: 0001_add_cliente_address_and_files.py  0002_add_plano_id_to_clientes.py  0003_add_ordens_servico_table.py  0004_add_tecnicos_table.py  (+15 more)
crm_core/: __init__.py
crm_modules/: __init__.py
plans/: sistema_contratos.md
scripts/: create_contratos_tables.py  migrate_contratos_v2.py  test_contratos.py
tasks/: worker.py
tests/: conftest.py  test_clientes.py  test_servidores.py
(+189 files in other folders)
